--- a/public/index.html
+++ b/public/index.html
@@ -165,4 +165,4 @@
       <div class="result-container">
         <div class="result-icon">✅</div>
         <h2>Hoàn Thành!</h2>
-        <p id="resultMessage">Bài làm của bạn đã được nộp thành công.</p>
+        <p id="resultMessage
