--- a/public/index.html
+++ b/public/index.html
@@ -165,4 +165,17 @@
       <div class="result-container">
         <div class="result-icon">✅</div>
         <h2>Hoàn Thành!</h2>
-        <p id="resultMessage
+        <p id="resultMessage">Bài làm của bạn đã được nộp thành công.</p>
+        <div id="scoreDisplay" class="score-display"></div>
+        <button class="btn btn-primary" id="backToHome">Về Trang Chủ</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- FOOTER + SCRIPT -->
+  <footer class="footer">
+    <p>© GV. Nguyễn Minh Thiện – Build with AI</p>
+  </footer>
+  <script src="main.js"></script>
+</body>
+</html>
