--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,6 @@
   <footer class="footer">
     <p>© GV. Nguyễn Minh Thiện – Build with AI</p>
   </footer>
-  <script src="main.js"></script>
+  <script src="main.js?v=20251218"></script>
 </body>
 </html>
