--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,12 @@
             <p class="empty-state">Đang tải...</p>
           </div>
         </div>
+        <div class="card">
+          <h3>📑 Danh Sách Đề Phụ</h3>
+          <div id="variantList" class="variants-list">
+            <p class="empty-state">Chưa có đề phụ nào</p>
+          </div>
+        </div>
 
         <div class="card">
           <h3>📊 Bài Nộp Gần Đây</h3>
