--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,12 @@
           </div>
         </div>
       </div>
+      <div id="examDetailModal" class="modal" aria-hidden="true">
+        <div class="modal-content" role="dialog" aria-modal="true">
+          <button class="close" id="closeModal" title="Đóng" aria-label="Đóng">✖</button>
+          ...
+        </div>
+      </div>
     </div>
 
     <!-- STUDENT INFO PAGE -->
