--- a/public/index.html
+++ b/public/index.html
@@ -109,17 +109,12 @@
         </div>
 
         <div class="card">
-          <h3>📚 Danh Sách Đề</h3>
+          <h3>📚 Kho Đề Thi (Đề Gốc & Đề Con)</h3>
           <div id="examList" class="exams-list">
             <p class="empty-state">Đang tải...</p>
           </div>
         </div>
-        <div class="card">
-          <h3>📑 Danh Sách Đề Phụ</h3>
-          <div id="variantList" class="variants-list">
-            <p class="empty-state">Chưa có đề phụ nào</p>
-          </div>
-        </div>
+
 
         <div class="card">
           <h3>📊 Bài Nộp Gần Đây</h3>
@@ -215,7 +210,7 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>© GV. Nguyễn Minh Thiện – Build with AI</p>
+    <p>GV. Nguyễn Minh Thiện – Build with AI</p>
   </footer>
   <script src="main.js?v=20251218"></script>
 </body>
