--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hệ Thống Kiểm Tra Trực Tuyến</title>
   <link rel="stylesheet" href="style.css" />
+  
+  <!-- ✅ MathJax Configuration - QUAN TRỌNG -->
   <script>
     window.MathJax = {
-      loader: { load: ['input/mml', 'output/chtml'] },
-      tex: { inlineMath: [['\\(', '\\)'], ['$', '$']] }
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
+        displayMath: [['$$', '$$'], ['\\[', '\\]']],
+        processEscapes: true,
+        processEnvironments: true
+      },
+      options: {
+        skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        ignoreHtmlClass: 'tex2jax_ignore',
+        processHtmlClass: 'tex2jax_process'
+      },
+      startup: {
+        pageReady: () => {
+          return MathJax.startup.defaultPageReady().then(() => {
+            console.log('✅ MathJax loaded successfully');
+          });
+        }
+      }
     };
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
 </head>
 <body>
   <div class="container">
@@ -44,6 +62,7 @@
         </div>
       </div>
     </div>
+
     <!-- TEACHER PAGE -->
     <div id="teacherPage" class="page">
       <div class="header">
@@ -58,7 +77,7 @@
             <div class="form-group">
               <label>Chọn file đề thi (Word)</label>
               <input type="file" id="examFile" accept=".doc,.docx" required />
-              <small>Đề gồm 3 phần theo form Bộ GD. Đảm bảo câu bắt đầu bằng "Câu X:"</small>
+              <small>✅ Hỗ trợ công thức Equation của Word 365</small>
             </div>
             <div class="form-row">
               <div class="form-group">
@@ -73,7 +92,7 @@
             <div class="form-group">
               <label for="variantCount"><strong>🔢 Số lượng mã đề:</strong></label>
               <input type="number" id="variantCount" min="1" max="20" value="1" style="width:80px; padding:6px;">
-              <small>Nhập số lượng mã đề muốn trộn (ví dụ: 5, 10…)</small>
+              <small>Nhập số lượng mã đề muốn trộn</small>
             </div>
 
             <div class="form-group">
@@ -106,6 +125,7 @@
           </form>
           <div id="uploadMessage" class="message" style="display:none;"></div>
         </div>
+
         <div class="card">
           <h3>📚 Kho Đề Thi (Đề Gốc & Đề Con)</h3>
           <div id="examList" class="exams-list">
@@ -120,6 +140,7 @@
           </div>
         </div>
       </div>
+
       <!-- EXAM DETAIL MODAL -->
       <div id="examDetailModal" class="modal" aria-hidden="true">
         <div class="modal-content" role="dialog" aria-modal="true">
@@ -134,6 +155,7 @@
         </div>
       </div>
     </div>
+
     <!-- STUDENT INFO PAGE -->
     <div id="studentInfoPage" class="page">
       <div class="header">
@@ -166,6 +188,7 @@
         </div>
       </div>
     </div>
+
     <!-- EXAM PAGE -->
     <div id="examPage" class="page">
       <div class="exam-header">
@@ -198,8 +221,26 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>GV. Nguyễn Minh Thiện – Build with AI</p>
+    <p> NMT – Dùng AI code ra web này đó </p>
   </footer>
+
   <script src="main.js?v=20251218"></script>
+  
+  <!-- ✅ Re-render MathJax khi thêm nội dung mới -->
+  <script>
+    // Helper function để render lại công thức sau khi thêm content động
+    window.renderMath = function() {
+      if (window.MathJax && window.MathJax.typesetPromise) {
+        MathJax.typesetPromise().then(() => {
+          console.log('✅ Math equations rendered');
+        }).catch((err) => console.error('❌ MathJax render error:', err));
+      }
+    };
+    
+    // Auto-render sau 500ms (đợi content load xong)
+    document.addEventListener('DOMContentLoaded', () => {
+      setTimeout(() => window.renderMath(), 500);
+    });
+  </script>
 </body>
 </html>
