--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
         </form>
         <div id="loginError" class="error-message"></div>
         <div class="info-text">
-          <p>💡 <strong>Giáo viên:</strong> Sử dụng mật khẩu giáo viên</p>
-          <p>📚 <strong>Học sinh:</strong> Sử dụng mật khẩu lớp học</p>
+          <p>💡 <strong>Giáo viên:</strong> Chắc chắn biết mật khẩu rồi</p>
+          <p>📚 <strong>Học sinh:</strong> Kiếm mật khẩu nhập vào lẹ lên</p>
         </div>
       </div>
     </div>
