--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
           <form id="studentInfoForm">
             <div class="form-group">
               <label>Họ và tên *</label>
-              <input type="text" id="studentName" placeholder="Nguyễn Thị A" required />
+              <input type="text" id="studentName" placeholder="Ghi đầy đủ họ và tên" required />
             </div>
             <div class="form-group">
               <label>Ngày sinh *</label>
